# pydantree

./: .gitignore  .tmuxp.yaml  README.md  SPEC.md  devenv.nix  devenv.yaml  pyproject.toml  pyproject_toml.txt
.config/: confidantic.yaml
.direnv/: devenv-profile-a05a8bc595f2971214b7a07738d6f6444d2a7d39.rc  devenv-profile-d86911f04014cfa9862a629a26d91ce2a3b4401a.rc  devenv-profile-f10690c5d9e501f3fa43f16e9f3edd9cb4b8fcb7.rc
data/: __init__.py
examples/: demo.py  view_demo.py
src/data/: __init__.py  pydantree_nodes.py  python_nodes.py
src/docs/: 1_pydantree_overview.md  2_core_foundation.md  3_nodegroup_collections.md  4_views_layer.md  5_graph_operations.md  6_code_generation.md  7_incremental_parsing.md
src/examples/: basic_parsing_demo.py  builder_demo.py  cli_demo.sh  demo.py  file_parse_demo.py  graph_demo.py  mock_graphsitter_demo.py  nodegroup_demo.py  sample_code.py  transformation_demo.py  validate_demo.py  view_demo.py
src/pydantree/: __init__.py  api.py  base_code_node.py  cli.py  codegen.py  core.py  generator.py  graph.py  incremental.py  loader.py  nodegroup.py  overlays.py  parser.py  views.py
src/pydantree/cli/: cli_module.py
src/pydantree/config/: settings.py
src/pydantree/core/: assignments.py  builders.py  classes.py  file.py  imports.py  parameters.py  statements.py
src/pydantree/main/: exceptions.py
src/pydantree/models/: py_function.py
src/pydantree/utils/: factory.py  factory_utils.py
src/tests/: test_builders.py  test_core.py
