[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydantree"
version = "0.1.2"
description = "Treesitter, but with more Pydantic."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Bullish Design", email = "BullishDesignEngineering@gmail.com" }
]
license = { file = "LICENSE" }
keywords = ["tree-sitter", "pydantic", "parser", "ast"]

dependencies = [
  "pydantic>=2.11",
  "tree-sitter>=0.23", # official Python bindings
  "tree-sitter-python>=0.23.6",
]

[project.optional-dependencies]
# Development tooling (tests, lint, type‑check, coverage)
dev = [
  "pytest>=8.0",
  "black>=24.0",
  "ruff>=0.4",
  "mypy>=1.10",
  "coverage>=7.0",
]
# 👉 Language bundle for Python examples.
python = [
  "tree-sitter-python>=0.23",  # pre‑compiled wheel containing the Python grammar
]

# ─────────────────────────────────────────────
# Packaging layout & entry point configuration
# ─────────────────────────────────────────────

[tool.hatch.build.targets.wheel]
packages = ["src/pydantree", "src/examples", "data"]

[project.scripts]
pydantree = "pydantree.cli:main"
demo = "examples.demo:main"
